--- a/frontend/src/styles/SearchBar.scss
+++ b/frontend/src/styles/SearchBar.scss
@@ -288,6 +288,10 @@
     &:hover {
       svg {
         transform: scale(1.05);
+
+        @media (max-width: 768px) {
+          transform: scale(1);
+        }
       }
     }
   }
