--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -647,9 +647,10 @@ button {
 
     .tags-popup {
       position: absolute;
-      top: 50px;
+      top: 55px;
       left: 8px;
-      max-height: 300px;
+      max-height: fit-content;
+      height: calc(100% - 58px);
       overflow-y: auto;
       width: calc(100% - 16px);
       background: #1b1b24;
@@ -661,7 +662,9 @@ button {
       overscroll-behavior: contain;
 
       &.tags-popup-max {
-        top: 75px;
+        top: 80px;
+        left: 12px;
+        max-height: 300px;
         max-width: 400px;
       }
 
@@ -683,22 +686,25 @@ button {
 
     .info-popup {
       position: absolute;
-      top: 50px;
+      top: 55px;
       left: 8px;
-      max-height: 300px;
+      max-height: fit-content;
+      height: calc(100% - 58px);
       overflow-y: auto;
       width: calc(100% - 16px);
       background: #1b1b24;
       color: #fff;
       border-radius: 8px;
-      padding: 12px;
+      padding: 0 12px;
       z-index: 20;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
       scroll-behavior: smooth;
       overscroll-behavior: contain;
 
       &.info-popup-max {
-        top: 75px;
+        top: 80px;
+        left: 12px;
+        max-height: 300px;
         max-width: 400px;
       }
 
