--- a/frontend/src/styles/NewsModal.scss
+++ b/frontend/src/styles/NewsModal.scss
@@ -377,6 +377,7 @@
             display: inline-block;
             width: 100%;
             margin-bottom: 10px;
+            height: fit-content;
             content-visibility: auto; // 🔥 Performance optimization
 
             @media (max-width: 768px) {
@@ -512,9 +513,10 @@
 
             .news-tags-popup {
               position: absolute;
-              top: 50px;
+              top: 47px;
               left: 8px;
-              max-height: 300px;
+              max-height: fit-content;
+              height: calc(100% - 63px);
               width: calc(100% - 16px);
               overflow-y: auto;
               background: #1b1b24;
@@ -545,15 +547,16 @@
 
             .news-info-popup {
               position: absolute;
-              top: 50px;
+              top: 47px;
               left: 8px;
-              max-height: 300px;
+              max-height: fit-content;
+              height: calc(100% - 63px);
               width: calc(100% - 16px);
               overflow-y: auto;
               background: #1b1b24;
               color: #fff;
               border-radius: 8px;
-              padding: 12px;
+              padding: 0 12px;
               z-index: 20;
               box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
               scroll-behavior: smooth;
@@ -890,7 +893,7 @@
 
   .news-tags-popup-max {
     position: absolute;
-    top: 90px;
+    top: 78px;
     left: 20px;
     max-height: 300px;
     width: 400px;
@@ -973,7 +976,7 @@
 
   .news-info-popup-max {
     position: absolute;
-    top: 90px;
+    top: 78px;
     left: 20px;
     max-height: 300px;
     width: 400px;
@@ -981,7 +984,7 @@
     background: #1b1b24;
     color: #fff;
     border-radius: 8px;
-    padding: 12px;
+    padding: 0 12px;
     z-index: 20;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     scroll-behavior: smooth;
